# ds

./: README.md  ai_coach.py  backend.py  bbbot.db  config.py  database.py  fitness_bot.db  glavn.html  handlers.py  init_database.py  keyboards.py  main.py  main1.py  requierments.txt.py  requirments.txt  test.py  test_ai.py  test_fix.py  user_analytics.py  user_data.py  webapp_handler.py
ds1/: database.py  fitness_bot.db  index.html  init_database.py  main.py  miniapp.py  run_mini_app.py  test.py  user_data.py
pythonanywhere/: app.py
src/client/: .env  index.html  package-lock.json  package.json  vite.config.ts
src/client/src/: App.tsx  main.tsx
src/client/src/interfaces/: IUser.ts
src/client/src/utils/: api.ts
src/server/: .env  __main__.py  config_reader.py  pyproject.toml
src/server/api/: __init__.py  common.py  users.py  utils.py
src/server/bot/handlers/: __init__.py  common.py
src/server/bot/keyboards/: builders.py
src/server/db/: __init__.py
src/server/db/migrations/models/: 0_20251129235557_init.py
src/server/db/models/: user.py
webapp/: app.py
webapp/static/: style.css
